--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@headlessui/react": "^1.7.10",
     "@next/font": "^13.1.6",
+    "chart.js": "^4.2.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
