--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@next/font": "^13.1.6",
     "chart.js": "^4.2.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-plugin-gradient": "^0.6.1",
+    "chartjs-plugin-lineheight-annotation": "^0.3.5",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
